# cs184-final-project

./: .gitignore  CMakeLists.txt  README.md
docs/: index.html
libs/AVX/x64_msvc/release/: pt31.lib
libs/AVX2/x64_msvc/release/: pt31.lib
libs/SSE/x64_msvc/release/: pt31.lib
src/application/: application.cpp  application.h  main.cpp
src/lens/: lens.cpp  lens.h
src/lenstester/: lenstester.cpp  lenstester.h  main.cpp
src/pathtracer/: advanced_bsdf.cpp  bsdf.cpp  bsdf.h  camera.cpp  camera.h  camera_lens.cpp  pathtracer.cpp  pathtracer.h  ray.h  raytraced_renderer.cpp  raytraced_renderer.h  sampler.cpp  sampler.h
src/scene/: bbox.cpp  bvh.cpp  environment_light.cpp  environment_light.h  sphere.cpp  sphere.h  triangle.cpp
src/scene/collada/: collada.cpp
src/util/: random_util.h
